<resources>
    <string name="app_name">Extraction System</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sure_exit">确定要退出吗？</string>
    <string name="sure">确\u0020\u0020\u0020\u0020\u0020定</string>
    <string name="cancle">取\u0020\u0020\u0020\u0020\u0020消</string>
    <string name="logout">注\u0020\u0020\u0020\u0020\u0020销</string>
    <string name="stop">停\u0020\u0020\u0020\u0020\u0020止</string>
    <string name="run">运\u0020\u0020\u0020\u0020\u0020行</string>
    <string name="pause">暂\u0020\u0020\u0020\u0020\u0020停</string>
    <string name="save">保\u0020\u0020\u0020\u0020\u0020存</string>
    <string name="other_save">另\u0020\u0020\u0020\u0020\u0020存</string>
    <string name="edit">编\u0020\u0020\u0020\u0020\u0020辑</string>
    <string name="back">返\u0020\u0020\u0020\u0020\u0020回</string>
    <string name="send">发\u0020\u0020\u0020\u0020\u0020送</string>
    <string name="reset">复\u0020\u0020\u0020\u0020\u0020位</string>
    <string name="complete">完\u0020\u0020\u0020\u0020\u0020成</string>
    <string name="update">升\u0020\u0020\u0020\u0020\u0020级</string>
    <string name="system_reset">系统复位</string>
    <string name="ultraviolet">紫外灯正在消毒</string>
    <string name="wifi_error">Wifi连接错误或未连接</string>
    <string name="wifi_error_run">Wifi连接错误或未连接,无法开始运行</string>
    <string name="template_null">不使用模板</string>
    <string name="template_one">模板一</string>
    <string name="template_two">模板二</string>
    <string name="waitting">请稍后&#8230;&#8230;</string>
    <string name="machine_not_connect">仪器未连接</string>
    <string name="has_same_exp_name">本地有相同实验，请输入新的实验名称</string>
    <string name="experiment">实验管理</string>
    <string name="log">实验日志</string>
    <string name="setting">系统设置</string>
    <string name="up_down">上传 &amp; 下载</string>
    <string name="disinfection">紫外消毒</string>
    <string name="help">帮\u0020\u0020\u0020\u0020\u0020助</string>
    <string name="user_name_null">用户名不能为空</string>
    <string name="user_pass_null">密码不能为空</string>
    <string name="user_error">用户名或密码错误</string>
    <string name="user_name_input">请输入用户名</string>
    <string name="user_pass_input">请输入密码</string>
    <string name="login">登\u0020\u0020\u0020\u0020\u0020录</string>
    <string name="register">注\u0020\u0020\u0020\u0020\u0020册</string>
    <string name="user_pass_delete">请输入此用户密码</string>
    <string name="user_pass_error">密码错误</string>
    <string name="user_delete_successful">刪除用户成功</string>
    <string name="user_rpass_null">确认密码不能为空</string>
    <string name="user_name_ture">用户名已被注册</string>
    <string name="user_register_success">注册成功！请登录</string>
    <string name="user_pass_rpass">两次输入的密码不一致</string>
    <string name="user_rpass_input">请确认密码</string>
    <string name="system_language">语言设置</string>
    <string name="system_net">网络设置</string>
    <string name="system_clean">消毒设置</string>
    <string name="system_qr">扫描试剂</string>
    <string name="system_user">用户设置</string>
    <string name="system_update">仪器升级</string>
    <string name="system_temp">系统温度</string>
    <string name="system_machine">仪器设置</string>
    <string name="system_detection">仪器检测</string>
    <string name="language_english">English</string>
    <string name="language_chinese">中  文</string>
    <string name="language_success">语言设置成功</string>
    <string name="language_failure">语言设置失败</string>
    <string name="net_name">仪器名称</string>
    <string name="net_wifi_unopen">Wifi没有打开</string>
    <string name="net_name_input">请输入仪器名称</string>
    <string name="net_name_not_null">仪器名称不能为空</string>
    <string name="net_ip">IP地址</string>
    <string name="net_ip_input">请输入IP地址</string>
    <string name="net_ip_format">IP地址格式不正确</string>
    <string name="net_ip_not_null">IP地址不能为空</string>
    <string name="net_mac">Mac地址</string>
    <string name="net_mac_input">请输入Mac地址</string>
    <string name="net_mac_format">Mac地址格式不正确</string>
    <string name="net_mac_not_null">Mac地址不能为空</string>
    <string name="net_gateway">默认网关</string>
    <string name="net_gateway_input">请输入默认网关</string>
    <string name="net_gateway_format">默认网关格式不正确</string>
    <string name="net_gateway_not_null">默认网关不能为空</string>
    <string name="net_mask">子网掩码</string>
    <string name="net_mask_input">请输入子网掩码</string>
    <string name="net_mask_format">子网掩码格式不正确</string>
    <string name="net_mask_not_null">子网掩码不能为空</string>
    <string name="net_success">网络设置成功</string>
    <string name="net_failure">网络设置失败</string>
    <string name="dismdect">消毒时间</string>
    <string name="dismdect_success">消毒时间设置成功</string>
    <string name="dismdect_failure">消毒时间设置失败</string>
    <string name="user_default">默认登录</string>
    <string name="user_pass_default">打开重置</string>
    <string name="user_pass_default_close">关闭重置</string>
    <string name="user_pass_default_sure">是否重置，重置后密码为：123456</string>
    <string name="user_pass_default_modify_successful">重置成功，重置密码为：123456</string>
    <string name="user_pass_default_modify_error">重置失败</string>
    <string name="user_pass">修改密码</string>
    <string name="user_original_pass">用户密码</string>
    <string name="user_original_pass_input">请输入用户密码</string>
    <string name="user_original_pass_not_null">用户密码不能为空</string>
    <string name="user_original_pass_error">用户密码错误</string>
    <string name="user_new_pass">新密码</string>
    <string name="user_new_pass_input">请输入新密码</string>
    <string name="user_new_pass_not_null">新密码不能为空</string>
    <string name="user_confirm_pass">确认密码</string>
    <string name="user_confirm_pass_input">请输入确认密码</string>
    <string name="user_confirm_pass_not_null">确认密码不能为空</string>
    <string name="two_pass_error">两次密码不一致</string>
    <string name="user_default_success">默认登录设置成功</string>
    <string name="user_default_failure">默认登录设置失败</string>
    <string name="user_pass_success">用户密码修改成功</string>
    <string name="user_pass_failure">用户密码修改失败</string>
    <string name="user_admin_admin">管理员</string>
    <string name="user_admin_user">用户</string>
    <string name="user_admin_name">用户名</string>
    <string name="user_admin_permissions">权\u0020\u0020限</string>
    <string name="user_admin_login">默认登录</string>
    <string name="user_admin_modify_psw">重置密码</string>
    <string name="instrument_flux_name">通\u0020量\u0020设\u0020置</string>
    <string name="instrument_parameter_run">运行参数设置</string>
    <string name="instrument_parameter_input">运行参数设置</string>
    <string name="instrument_blend">混合电机控制</string>
    <string name="instrument_reboot">系统复位中，请稍后</string>
    <string name="instrument_magnetic">磁吸电机控制</string>
    <string name="instrument_hole">水平电机控制</string>
    <string name="instrument_hole_space">孔间距校正</string>
    <string name="instrument_hole_space_info">孔间距校正:(mm)</string>
    <string name="instrument_hole_info">水平电机校正:(mm)</string>
    <string name="instrument_blend_info">混合电机校正:(mm)</string>
    <string name="instrument_magnetic_info">磁吸电机校正:(mm)</string>
    <string name="instrument_hole_space_step">步</string>
    <string name="instrument_blend_null">混合电机控制值不能为空</string>
    <string name="instrument_magnetic_null">磁吸电机控制值不能为空</string>
    <string name="instrument_hole_null">水平运动电机控制值不能为空</string>
    <string name="instrument_hole_success">水平运动电机移动成功</string>
    <string name="instrument_hole_space_success">孔间距设置成功</string>
    <string name="instrument_blend_success">混合电机移动成功</string>
    <string name="instrument_magnetic_success">磁吸电机移动成功</string>
    <string name="instrument_flux_selete">通量选择</string>
    <string name="instrument_success">仪器设置成功</string>
    <string name="instrument_failure">仪器设置失败</string>
    <string name="detection_check">检    测</string>
    <string name="detection_not_back">正在检测,不能返回!</string>
    <string name="detection_not_check">正在检测,不能切换!</string>
    <string name="detection_checking">正在检测&#8230;&#8230;</string>
    <string name="detection_power">供电电压</string>
    <string name="detection_sensor">加热条传感器</string>
    <string name="detection_heating">加热条升降温</string>
    <string name="detection_shock">混合电机</string>
    <string name="detection_magnet">磁吸电机</string>
    <string name="detection_level">水平运动电机</string>
    <string name="detection_five">•5伏电压错误</string>
    <string name="detection_twelve">•12伏电压错误</string>
    <string name="detection_thirty_three">•27伏电压错误</string>
    <string name="detection_power_sucess">•供电电压检测正常</string>
    <string name="detection_sensor_t1">•加热条1传感器错误</string>
    <string name="detection_sensor_t2">•加热条2传感器错误</string>
    <string name="detection_sensor_t3">•加热条3传感器错误</string>
    <string name="detection_sensor_t4">•加热条4传感器错误</string>
    <string name="detection_sensor_t5">•加热条5传感器错误</string>
    <string name="detection_sensor_t6">•加热条6传感器错误</string>
    <string name="detection_sensor_t7">•加热条7传感器错误</string>
    <string name="detection_sensor_t8">•加热条8传感器错误</string>
    <string name="detection_sensor_sucess">•加热条传感器正常</string>
    <string name="detection_heating_error_one">•加热条:</string>
    <string name="detection_heating_error_two">错误</string>
    <string name="detection_heating_sucess">•加热条升降温正常</string>
    <string name="detection_shock_sucess">•混合电机正常</string>
    <string name="detection_magnet_sucess">•磁吸电机正常</string>
    <string name="detection_level_sucess">•水平运动电机正常</string>
    <string name="detection_shock_error">•混合电机错误</string>
    <string name="detection_magnet_error">•磁吸电机错误</string>
    <string name="detection_level_error">•水平运动电机错误</string>
    <string name="exp_no_select">没有选择实验</string>
    <string name="exp_sure_to_delete">确定要删除这条实验吗？</string>
    <string name="exp_new_exp">新建实验</string>
    <string name="exp_delete_exp">删除实验</string>
    <string name="exp_delete_success_exp">删除实验成功</string>
    <string name="exp_add_quick">添加快捷实验</string>
    <string name="exp_cancle_quick">取消快捷实验</string>
    <string name="exp_name_null">实验名称不能为空</string>
    <string name="exp_name_too_long">实验名称超过20个字符，请重新输入</string>
    <string name="exp_name_already_exist">实验名称已经存在，请重新输入!</string>
    <string name="exp_save_null">步骤不能为空</string>
    <string name="exp_creating">正在编辑实验,请稍后&#8230;&#8230;</string>
    <string name="exp_prepareing">正在准备实验,请稍后&#8230;&#8230;</string>
    <string name="exp_creat_date">创建时间:</string>
    <string name="exp_edit_date">修改时间:</string>
    <string name="exp_quick_exp">快捷实验:</string>
    <string name="exp_remark">实验备注:</string>
    <string name="exp_edit_success">修改成功</string>
    <string name="exp_edit_failure">修改失败</string>
    <string name="exp_new_not_exit">新建实验过程中不能退出</string>
    <string name="exp_edit_not_exit">编辑实验过程中不能退出</string>
    <string name="exp_inset_success">插入成功</string>
    <string name="exp_delete_success">删除成功</string>
    <string name="exp_step_name_null">步骤名不能为空</string>
    <string name="information">Copyright 2010 by Xi‘an tianlong\nscience﹠Technology Corporation.</string>
    <string name="systemnum">	系统版本号:</string>
    <string name="about_us">联系我们</string>
    <string name="company_name">公司名称:</string>
    <string name="company_name_info">西安天隆科技有限公司</string>
    <string name="company_address">公司地址:</string>
    <string name="company_address_info">西安市朱宏路389号</string>
    <string name="company_phone">电话:</string>
    <string name="company_phone_info">029-82218051 83204255</string>
    <string name="company_net">公司网址:</string>
    <string name="company_net_info">http://www.medtl.com</string>
    <string name="company_postcode">邮政编码:</string>
    <string name="company_postcode_info">710018</string>
    <string name="company_business">电子商务:</string>
    <string name="company_business_info">medtl@medtl.com</string>
    <string name="company_sell">销售部:</string>
    <string name="company_sell_info">contact@medtl.com</string>
    <string name="company_service">服务部:</string>
    <string name="company_service_info">xatl@medtl.com</string>
    <string name="company_technical">技术部:</string>
    <string name="company_technical_info">support@medtl.com</string>
</resources>