<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<RelativeLayout android:id="@+id/dasdffff"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="50dip">
	    <RelativeLayout android:id="@+id/help_right_new_item_head_rl"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content">
	        <TextView android:id="@+id/help_right_new_item_head_tv"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/about_us"
			    android:textColor="@color/white"
			    android:textSize="25sp"
			    android:layout_centerHorizontal="true"/>
	        <ImageView android:id="@+id/help_right_new_item_head_iv"
	            android:layout_width="600dip"
	            android:layout_height="1dip"
	            android:layout_below="@id/help_right_new_item_head_tv"
	            android:background="@drawable/experiment_xian"
	            android:layout_centerHorizontal="true"/>
	    </RelativeLayout>
	    <RelativeLayout android:id="@+id/help_main_right_body_rl"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/help_right_new_item_head_rl"
	        android:layout_marginTop="5dip"
	        android:layout_centerInParent="true">
	        <RelativeLayout android:id="@+id/help_main_right_body_name"
	            android:layout_width="600dip"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true">
	            <TextView android:id="@+id/help_main_right_body_name_tv"
	                style="@style/textStyle"
	                android:text="@string/company_name"/>
	            <TextView android:id="@+id/help_main_right_body_name_info_tv"
	                style="@style/textStyle"
	                android:text="@string/company_name_info"
	                android:layout_alignParentRight="true"/>
	        </RelativeLayout>
	        <ImageView android:id="@+id/help_main_right_body_name_iv"
	                style="@style/imageStyle"
	                android:layout_below="@id/help_main_right_body_name"/>
	        <RelativeLayout android:id="@+id/help_main_right_body_edittime"
	            android:layout_width="600dip"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/help_main_right_body_name"
	            android:layout_marginTop="5dip">
	            <TextView android:id="@+id/help_main_right_body_edittime_tv"
	                style="@style/textStyle"
	                android:text="@string/company_address"/>
	            
	            <TextView android:id="@+id/help_main_right_body_edittime_info_tv"
	                style="@style/textStyle"
	                android:text="@string/company_address_info"
	                android:layout_alignParentRight="true"/>
	        </RelativeLayout>
	        <ImageView android:id="@+id/help_main_right_body_edittime_iv"
	                style="@style/imageStyle"
	                android:layout_below="@id/help_main_right_body_edittime"/>
	        <RelativeLayout android:id="@+id/help_main_right_body_controlmode"
	            android:layout_width="600dip"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/help_main_right_body_edittime_iv"
	            android:layout_marginTop="5dip">
	            <TextView android:id="@+id/help_main_right_body_controlmode_tv"
	                style="@style/textStyle"
	                android:text="@string/company_phone"
	                android:layout_centerVertical="true"/>
	            
	            <TextView android:id="@+id/help_main_right_body_controlmode_info_tv"
	                style="@style/textStyle"
	                android:text="@string/company_phone_info"
	                android:layout_alignParentRight="true"/>
	        </RelativeLayout>
	        <ImageView android:id="@+id/help_main_right_body_controlmode_iv"
	                style="@style/imageStyle"
	                android:layout_below="@id/help_main_right_body_controlmode"/>
	        <RelativeLayout android:id="@+id/help_main_right_body_upspeed"
	            android:layout_width="600dip"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/help_main_right_body_controlmode_iv"
	            android:layout_marginTop="5dip">
	            <TextView android:id="@+id/help_main_right_body_upspeed_tv"
	                style="@style/textStyle"
	                android:text="@string/company_net"/>
	            
	            <TextView android:id="@+id/help_main_right_body_upspeed_info_tv"
	                style="@style/textStyle"
	                android:text="@string/company_net_info"
	                android:layout_alignParentRight="true"/>
	        </RelativeLayout>
	        <ImageView android:id="@+id/help_main_right_body_upspeed_iv"
	                style="@style/imageStyle"
	                android:layout_below="@id/help_main_right_body_upspeed"/>
	        <RelativeLayout android:id="@+id/help_main_right_body_downspeed"
	            android:layout_width="600dip"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dip"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/help_main_right_body_upspeed_iv">
	            <TextView android:id="@+id/help_main_right_body_downspeed_tv"
	                style="@style/textStyle"
	                android:text="@string/company_postcode"/>
	            
	            <TextView android:id="@+id/help_main_right_body_downspeed_info_tv"
	                style="@style/textStyle"
	                android:text="@string/company_postcode_info"
	                android:layout_alignParentRight="true"/>
	        </RelativeLayout>
	        <ImageView android:id="@+id/help_main_right_body_downspeed_iv"
	                style="@style/imageStyle"
	                android:layout_below="@id/help_main_right_body_downspeed"/>
	        <RelativeLayout android:id="@+id/help_main_right_body_template"
	            android:layout_width="600dip"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dip"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/help_main_right_body_downspeed_iv">
	            <TextView android:id="@+id/help_main_right_body_template_tv"
	                style="@style/textStyle"
	                android:text="@string/company_business"/>
	            
	            <TextView android:id="@+id/help_main_right_body_template_info_tv"
	                style="@style/textStyle"
	                android:text="@string/company_business_info"
	                android:layout_alignParentRight="true"/>
	        </RelativeLayout>
	        <ImageView android:id="@+id/help_main_right_body_template_iv"
	                style="@style/imageStyle"
	                android:layout_below="@id/help_main_right_body_template"/>
	        <RelativeLayout android:id="@+id/help_main_right_body_gradient"
	            android:layout_width="600dip"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/help_main_right_body_template_iv"
	            android:layout_marginTop="5dip">
	            <TextView android:id="@+id/help_main_right_body_gradient_tv"
	                style="@style/textStyle"
	                android:text="@string/company_sell"
	                android:layout_centerVertical="true"/>
	            
	            <TextView android:id="@+id/help_main_right_body_gradient_info_tv"
	                style="@style/textStyle"
	                android:text="@string/company_sell_info"
	                android:layout_alignParentRight="true"/>
	        </RelativeLayout>
	        <ImageView android:id="@+id/help_main_right_body_gradient_iv"
	                style="@style/imageStyle"
	                android:layout_below="@id/help_main_right_body_gradient"/>
	        <RelativeLayout android:id="@+id/help_main_right_body_touchdown"
	            android:layout_width="600dip"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/help_main_right_body_gradient_iv"
	            android:layout_marginTop="5dip">
	            <TextView android:id="@+id/help_main_right_body_touchdown_tv"
	                style="@style/textStyle"
	                android:text="@string/company_service"
	                android:layout_centerVertical="true"/>
	            
	            <TextView android:id="@+id/help_main_right_body_touchdown_info_tv"
	                style="@style/textStyle"
	                android:text="@string/company_service_info"
	                android:layout_alignParentRight="true"/>
	        </RelativeLayout>
	        <ImageView android:id="@+id/help_main_right_body_touchdown_iv"
	            style="@style/imageStyle"
	            android:layout_below="@id/help_main_right_body_touchdown"/>
	        <RelativeLayout android:id="@+id/help_main_right_body_long"
	            android:layout_width="600dip"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:layout_below="@id/help_main_right_body_touchdown_iv"
	            android:layout_marginTop="5dip">
	            <TextView android:id="@+id/help_main_right_body_long_tv"
	                style="@style/textStyle"
	                android:text="@string/company_technical"
	                android:layout_centerVertical="true"/>
	            
	            <TextView android:id="@+id/help_main_right_body_long_info_tv"
	                style="@style/textStyle"
	                android:text="@string/company_technical_info"
	                android:layout_alignParentRight="true"/>
	        </RelativeLayout>
	        <ImageView android:id="@+id/help_main_right_body_long_iv"
	            style="@style/imageStyle"
	            android:layout_below="@id/help_main_right_body_long"/>
	    </RelativeLayout>
	</RelativeLayout>
	<RelativeLayout android:id="@+id/help_right_about_bottom_btn_rl"
       	style="@style/right_bottom_rl"
       	android:layout_width="fill_parent">
        <Button android:id="@+id/help_right_about_back_btn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:clickable="true"
            android:background="@drawable/btn_selector"
	        android:text="@string/back"
	        android:textSize="15sp"
	        android:textColor="@android:color/white"
	        android:layout_alignParentRight="true"/>
    </RelativeLayout>
</RelativeLayout>