<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <RelativeLayout android:id="@+id/machine_user_pass_body_rl"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <RelativeLayout android:id="@+id/machine_user_pass_body_rl"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true">
	        <RelativeLayout android:id="@+id/machine_user_pass_body_original_rl"
	            android:layout_width="500dip"
	            android:layout_height="wrap_content">
	            <TextView android:id="@+id/machine_user_pass_body_original_tv"
	                style="@style/right_textview"
	                android:text="@string/user_original_pass"
	                android:layout_centerVertical="true"/>
	            <EditText android:id="@+id/machine_user_pass_body_original_et"
	                style="@style/right_edittext"
	                android:hint="@string/user_original_pass_input"
	                android:password="true"/>
	            <ImageView android:id="@+id/machine_user_pass_body_original_iv"
	                style="@style/right_bottom_imageview"
	                android:layout_marginTop="10dip"
	                android:layout_below="@id/machine_user_pass_body_original_et"/>
	        </RelativeLayout>
	        <RelativeLayout android:id="@+id/machine_user_pass_body_new_rl"
	            android:layout_width="500dip"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_below="@id/machine_user_pass_body_original_rl">
	            <TextView android:id="@+id/machine_user_pass_body_new_tv"
	                style="@style/right_textview"
	                android:text="@string/user_new_pass"
	                android:layout_centerVertical="true"/>
	            <EditText android:id="@+id/machine_user_pass_body_new_et"
	                style="@style/right_edittext"
	                android:hint="@string/user_new_pass_input"
	                android:password="true"/>
	            <ImageView android:id="@+id/machine_user_pass_body_new_iv"
	                style="@style/right_bottom_imageview"
	                android:layout_marginTop="10dip"
	                android:layout_below="@id/machine_user_pass_body_new_et"/>
	        </RelativeLayout>
	        <RelativeLayout android:id="@+id/machine_user_pass_body_confirm_rl"
	            android:layout_width="500dip"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dip"
	            android:layout_below="@id/machine_user_pass_body_new_rl">
	            <TextView android:id="@+id/machine_user_pass_body_confirm_tv"
	                style="@style/right_textview"
	                android:text="@string/user_confirm_pass"
	                android:layout_centerVertical="true"/>
	            <EditText android:id="@+id/machine_user_pass_body_confirm_et"
	                style="@style/right_edittext"
	                android:hint="@string/user_confirm_pass_input"
	                android:password="true"/>
	            <ImageView android:id="@+id/machine_user_pass_body_confirm_iv"
	                style="@style/right_bottom_imageview"
	                android:layout_marginTop="10dip"
	                android:layout_below="@id/machine_user_pass_body_confirm_et"/>
	        </RelativeLayout>
	    </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
